umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_hclo4.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hypervalent
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E`F?"
    atoms:
      - "{Hv1}"
      - "{O/2v2}"
      - "{Clv7}"
      - "{O/2v2}"
      - "{O/2v2}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "="
      - "="
      - "="
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E`F?"
    atoms:
      - "{Hv1}"
      - "{O/2v2}"
      - "{Clv7}"
      - "{O/2v2}"
      - "{O/2v2}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "="
      - "="
      - "="
