umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_pcl5.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hypervalent
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E}??"
    atoms:
      - "P#v5"
      - "Cl#n3#v"
      - "Cl#n3#v"
      - "Cl#n3#v"
      - "Cl#n3#v"
      - "Cl#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E}??"
    atoms:
      - "P#v5"
      - "Cl#n3#v"
      - "Cl#n3#v"
      - "Cl#n3#v"
      - "Cl#n3#v"
      - "Cl#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
