umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_sf4.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hypervalent
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: "D{?"
    atoms:
      - "S#n#v4"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: "D{?"
    atoms:
      - "S#n#v4"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
