umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_sf6.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hypervalent
atom_typing:
  success: true
  summary:
    atom_count: 7
    bond_count: 6
    topology: F~???
    atoms:
      - "S#v6"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 7
    bond_count: 6
    topology: F~???
    atoms:
      - "S#v6"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
      - "F#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
