umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_so42-.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hypervalent
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: "Valence ambiguous for atom O at index 1 has 2 valence matches: {O/2v2}, {O/1v2a2}"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: "D{?"
    atoms:
      - "{Sv6}"
      - "{O/2v2}"
      - "{O/2v2}"
      - "{O-/3v1}"
      - "{O-/3v1}"
    bonds:
      - "="
      - "="
      - "-"
      - "-"
